tests/snapshots/render/ansi@commonmark-spec-263-list_items.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/263-list_items.md
---
 1. foo

    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0mbar                                                                     [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m

    baz

    [90m▌ [0m[3mbam[0m
