tests/snapshots/render/ansi@commonmark-spec-264-list_items.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/264-list_items.md
snapshot_kind: text
---
• Foo

  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0m[33mbar[0m                                                                       [32m │[0m
  [32m│ [0m[33m[0m                                                                          [32m │[0m
  [32m│ [0m[33m[0m                                                                          [32m │[0m
  [32m│ [0m[33mbaz[0m                                                                       [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m
