tests/snapshots/render/ansi@commonmark-spec-274-list_items.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/274-list_items.md
snapshot_kind: text
---
 1. 
    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0m[33m indented code[0m                                                          [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m

    paragraph

    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0m[33mmore code[0m                                                               [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m
