tests/snapshots/render/ansi@commonmark-spec-289-list_items.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/289-list_items.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m1.  A paragraph                                                             [32m │[0m
[32m│ [0m    with two lines.                                                         [32m │[0m
[32m│ [0m                                                                            [32m │[0m
[32m│ [0m        indented code                                                       [32m │[0m
[32m│ [0m                                                                            [32m │[0m
[32m│ [0m    > A block quote.                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
